// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should test a default HCSegmentTabs 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      >
        <div
          class="MuiStack-root css-nen11g-MuiStack-root"
        >
          <div
            class="MuiBox-root css-70qvj9"
          >
            <div
              class="MuiBox-root css-6zl3zg"
              role="button"
            >
              ONE
            </div>
            <div
              class="MuiBox-root css-kix0dn"
              role="button"
            >
              TWO LONG
            </div>
            <div
              class="MuiBox-root css-es19l0"
              role="button"
            >
              THREE
            </div>
          </div>
          <div
            class="MuiStack-root css-tnf4by-MuiStack-root"
          >
            One
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            Two
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            Three
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    >
      <div
        class="MuiStack-root css-nen11g-MuiStack-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <div
            class="MuiBox-root css-6zl3zg"
            role="button"
          >
            ONE
          </div>
          <div
            class="MuiBox-root css-kix0dn"
            role="button"
          >
            TWO LONG
          </div>
          <div
            class="MuiBox-root css-es19l0"
            role="button"
          >
            THREE
          </div>
        </div>
        <div
          class="MuiStack-root css-tnf4by-MuiStack-root"
        >
          One
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          Two
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          Three
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should test a default HCSegmentTabs ActiveIndex 1 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      >
        <div
          class="MuiStack-root css-nen11g-MuiStack-root"
        >
          <div
            class="MuiBox-root css-70qvj9"
          >
            <div
              class="MuiBox-root css-kix0dn"
              role="button"
            >
              ONE
            </div>
            <div
              class="MuiBox-root css-6zl3zg"
              role="button"
            >
              TWO LONG
            </div>
            <div
              class="MuiBox-root css-es19l0"
              role="button"
            >
              THREE
            </div>
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            One
          </div>
          <div
            class="MuiStack-root css-tnf4by-MuiStack-root"
          >
            Two
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            Three
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    >
      <div
        class="MuiStack-root css-nen11g-MuiStack-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <div
            class="MuiBox-root css-kix0dn"
            role="button"
          >
            ONE
          </div>
          <div
            class="MuiBox-root css-6zl3zg"
            role="button"
          >
            TWO LONG
          </div>
          <div
            class="MuiBox-root css-es19l0"
            role="button"
          >
            THREE
          </div>
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          One
        </div>
        <div
          class="MuiStack-root css-tnf4by-MuiStack-root"
        >
          Two
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          Three
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should test a default HCSegmentTabs ActiveIndex 2 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      >
        <div
          class="MuiStack-root css-nen11g-MuiStack-root"
        >
          <div
            class="MuiBox-root css-70qvj9"
          >
            <div
              class="MuiBox-root css-kix0dn"
              role="button"
            >
              ONE
            </div>
            <div
              class="MuiBox-root css-kix0dn"
              role="button"
            >
              TWO LONG
            </div>
            <div
              class="MuiBox-root css-6zl3zg"
              role="button"
            >
              THREE
            </div>
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            One
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            Two
          </div>
          <div
            class="MuiStack-root css-tnf4by-MuiStack-root"
          >
            Three
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    >
      <div
        class="MuiStack-root css-nen11g-MuiStack-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <div
            class="MuiBox-root css-kix0dn"
            role="button"
          >
            ONE
          </div>
          <div
            class="MuiBox-root css-kix0dn"
            role="button"
          >
            TWO LONG
          </div>
          <div
            class="MuiBox-root css-6zl3zg"
            role="button"
          >
            THREE
          </div>
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          One
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          Two
        </div>
        <div
          class="MuiStack-root css-tnf4by-MuiStack-root"
        >
          Three
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should test a default HCSegmentTabs Border 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      >
        <div
          class="MuiStack-root css-nen11g-MuiStack-root"
        >
          <div
            class="MuiBox-root css-70qvj9"
          >
            <div
              class="MuiBox-root css-10pbone"
              role="button"
            >
              ONE
            </div>
            <div
              class="MuiBox-root css-1f7s3ut"
              role="button"
            >
              TWO LONG
            </div>
            <div
              class="MuiBox-root css-1f7s3ut"
              role="button"
            >
              THREE
            </div>
          </div>
          <div
            class="MuiStack-root css-tnf4by-MuiStack-root"
          >
            One
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            Two
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            Three
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    >
      <div
        class="MuiStack-root css-nen11g-MuiStack-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <div
            class="MuiBox-root css-10pbone"
            role="button"
          >
            ONE
          </div>
          <div
            class="MuiBox-root css-1f7s3ut"
            role="button"
          >
            TWO LONG
          </div>
          <div
            class="MuiBox-root css-1f7s3ut"
            role="button"
          >
            THREE
          </div>
        </div>
        <div
          class="MuiStack-root css-tnf4by-MuiStack-root"
        >
          One
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          Two
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          Three
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should test a default HCSegmentTabs FullWidth 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      >
        <div
          class="MuiStack-root css-nen11g-MuiStack-root"
        >
          <div
            class="MuiBox-root css-16x7f5m"
          >
            <div
              class="MuiBox-root css-6zl3zg"
              role="button"
            >
              ONE
            </div>
            <div
              class="MuiBox-root css-kix0dn"
              role="button"
            >
              TWO LONG
            </div>
            <div
              class="MuiBox-root css-es19l0"
              role="button"
            >
              THREE
            </div>
          </div>
          <div
            class="MuiStack-root css-tnf4by-MuiStack-root"
          >
            One
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            Two
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            Three
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    >
      <div
        class="MuiStack-root css-nen11g-MuiStack-root"
      >
        <div
          class="MuiBox-root css-16x7f5m"
        >
          <div
            class="MuiBox-root css-6zl3zg"
            role="button"
          >
            ONE
          </div>
          <div
            class="MuiBox-root css-kix0dn"
            role="button"
          >
            TWO LONG
          </div>
          <div
            class="MuiBox-root css-es19l0"
            role="button"
          >
            THREE
          </div>
        </div>
        <div
          class="MuiStack-root css-tnf4by-MuiStack-root"
        >
          One
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          Two
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          Three
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should test a default HCSegmentTabs FullWidth Border 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      >
        <div
          class="MuiStack-root css-nen11g-MuiStack-root"
        >
          <div
            class="MuiBox-root css-16x7f5m"
          >
            <div
              class="MuiBox-root css-10pbone"
              role="button"
            >
              ONE
            </div>
            <div
              class="MuiBox-root css-1f7s3ut"
              role="button"
            >
              TWO LONG
            </div>
            <div
              class="MuiBox-root css-1f7s3ut"
              role="button"
            >
              THREE
            </div>
          </div>
          <div
            class="MuiStack-root css-tnf4by-MuiStack-root"
          >
            One
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            Two
          </div>
          <div
            class="MuiStack-root css-llygh-MuiStack-root"
          >
            Three
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    >
      <div
        class="MuiStack-root css-nen11g-MuiStack-root"
      >
        <div
          class="MuiBox-root css-16x7f5m"
        >
          <div
            class="MuiBox-root css-10pbone"
            role="button"
          >
            ONE
          </div>
          <div
            class="MuiBox-root css-1f7s3ut"
            role="button"
          >
            TWO LONG
          </div>
          <div
            class="MuiBox-root css-1f7s3ut"
            role="button"
          >
            THREE
          </div>
        </div>
        <div
          class="MuiStack-root css-tnf4by-MuiStack-root"
        >
          One
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          Two
        </div>
        <div
          class="MuiStack-root css-llygh-MuiStack-root"
        >
          Three
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
